# task_control

./: CMakeLists.txt  README.md  build_app.sh  package.xml  run_app_simulator.sh  run_task_control.sh
include/: fsm.h  robot.h  robot_base.h  robot_com.h  robot_factory.h
src/: fsm.cpp  main.cpp  robot.cpp  robot_base.cpp  robot_com.cpp  robot_factory.cpp
task_control_interface/: CMakeLists.txt  build_interface.sh  package.xml
task_control_interface/action/: Motion.action
task_control_interface/msg/: AppCmd.msg  McuFeedback.msg  McuInfo.msg  McuToMotion.msg  McuToTask.msg  Motion.action  MotionExcution.msg  MotionToMcu.msg  TaskControl.msg  TaskToMcu.msg  VisionResult.msg
test/src/: main.cpp
